# w0303-ipc1

./: CMakeLists.txt  README.md
data/point_clouds/real/arm_mission_config_11167/task_group_6196/point-cloud/: 6196-11167-0-0-corner.pcd  6196-11167-0-1-corner.pcd  6196-11167-1-0-planar.pcd  6196-11167-2-0-floor.pcd  6196-11167-2-1-floor.pcd  6196-11167-2-2-floor.pcd  6196-11167-2-3-floor.pcd
data/point_clouds/real/arm_mission_config_11167/task_group_6196/tf/: 0-0.txt  0-1.txt  1-0.txt  2-0.txt  2-1.txt  2-2.txt  2-3.txt
data/point_clouds/real/arm_mission_config_11167/task_group_6197/point-cloud/: 6197-11167-1-1-corner.pcd  6197-11167-1-2-corner.pcd  6197-11167-2-1-planar.pcd  6197-11167-3-1-floor.pcd  6197-11167-3-2-floor.pcd  6197-11167-3-3-floor.pcd  6197-11167-3-4-floor.pcd
data/point_clouds/real/arm_mission_config_11167/task_group_6197/tf/: 6197-11167-1-1-corner-tf  6197-11167-3-4-floor-tf
data/point_clouds/real/arm_mission_config_11167/task_group_6198/point_cloud/: 6198-11167-1-1-corner.pcd  6198-11167-1-2-corner.pcd  6198-11167-2-1-planar.pcd  6198-11167-3-1-floor.pcd  6198-11167-3-2-floor.pcd  6198-11167-3-3-floor.pcd  6198-11167-3-4-floor.pcd
data/point_clouds/real/arm_mission_config_11167/task_group_6199/point_cloud/: 6199-11167-1-1-corner.pcd  6199-11167-1-2-corner.pcd  6199-11167-2-1-planar.pcd  6199-11167-3-1-floor.pcd  6199-11167-3-2-floor.pcd  6199-11167-3-3-floor.pcd  6199-11167-3-4-floor.pcd
data/point_clouds/real/arm_mission_config_11167/task_group_6199/tf/: 6199-11167-1-1-corner-tf.txt
data/point_clouds/real/arm_mission_config_11167/task_group_6200/point_cloud/: 6200-11167-1-1-corner.pcd  6200-11167-1-2-corner.pcd  6200-11167-2-1-planar.pcd  6200-11167-3-1-floor.pcd  6200-11167-3-2-floor.pcd  6200-11167-3-3-floor.pcd  (+1 more)
doc/workflows/: w0303_workflow_summary.drawio  workflow_frontend_funtions.drawio
include/: al.h  al_common.h  arm.h  data.h  data_arm.h  data_common.h  data_models.h  data_schedule.h  data_ugv.h  ipc2.h  modbus_tm_cllient.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  net_w0303_client.h  net_w0303_common.h  net_w0303_server.h  nw_status.h  nw_sys.h  sql.h  sql2.h  ugv.h
logs/: google_glog.exe.WUYONGF.yongf.log.ERROR.20210201-111733.txt  google_glog.exe.WUYONGF.yongf.log.ERROR.20210201-111955.5524  google_glog.exe.WUYONGF.yongf.log.ERROR.20210205-110656.15036  google_glog.exe.WUYONGF.yongf.log.ERROR.20210205-113349.3004  google_glog.exe.WUYONGF.yongf.log.INFO.20210201-111733.2228  google_glog.exe.WUYONGF.yongf.log.INFO.20210201-111955.5524  google_glog.exe.WUYONGF.yongf.log.INFO.20210205-110656.15036  google_glog.exe.WUYONGF.yongf.log.INFO.20210205-113349.3004  google_glog.exe.WUYONGF.yongf.log.WARNING.20210201-111733.2228  google_glog.exe.WUYONGF.yongf.log.WARNING.20210201-111955.5524  google_glog.exe.WUYONGF.yongf.log.WARNING.20210205-110656.15036  google_glog.exe.WUYONGF.yongf.log.WARNING.20210205-113349.3004  ipc_module.exe.WUYONGF.yongf.log.INFO.20210205-175617.29404  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210202-110607.7580  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210202-111859.2796  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210202-114305.4412  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210202-115347.17540  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210202-170924.7660  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210205-114431.16016  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210205-131247.20940  w0303_entrance2.exe.WUYONGF.yongf.log.INFO.20210205-134436.21284  w0303_entrance3.exe.WUYONGF.yongf.log.INFO.20210208-135511.41232  w0303_entrance3.exe.WUYONGF.yongf.log.INFO.20210208-135727.39472  w0303_entrance3.exe.WUYONGF.yongf.log.INFO.20210208-140855.21136  w0303_entrance3.exe.WUYONGF.yongf.log.INFO.20210216-103141.15172  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-184255.16704  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-184348.24644  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-184824.5172  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-184838.7972  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-184856.5404  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185104.26048  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185336.24160  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185345.23528  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185355.24928  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185655.21636  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-185711.24088  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210603-190108.24880  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210604-094725.10232  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210604-094842.22824  w0303_main.exe.DESKTOP-97DONJ0.NW_W0.log.INFO.20210604-101326.19448  (+788 more)
script/: cmakelist_backup.txt  map-decode.js
src/: Demo_GIES.cpp  backup_1_entrance.cpp  manager_arm.cpp  mir_poco.cpp  net_simple_client.cpp  net_simple_sever.cpp  rmove_backup.cpp  sql.cpp  w0303_entrance.cpp  w0303_entrance2.cpp  w0303_entrance3.cpp  w0303_main.cpp  w0303_main_test1.cpp
useful-functions/: A_algorithm.cpp  Untitled Diagram.drawio  al_test.cpp  arm_setup_ref_lm_pos.cpp  arm_test.cpp  boost_chat_client.cpp  boost_server_tutorial.cpp  boost_tcpip.cpp  chiu_c_testing.cpp  dll.cpp  eigen_mat_tutorial.cpp  header_demo.cpp  header_tutorial.cpp  header_tutorial.h  hex2float.cpp  map.cpp  markdown_template.md  mat_tutorial.cpp  mir_map.cpp  mir_poco.cpp  mir_state.cpp  modbus_test.cpp  motion_type_curve.h  pcl_tutorial.cpp  poco_ping_testing.cpp  sql_ha_onsite_setting.cpp  sql_ha_setting.cpp  sql_testing.cpp  str_parse_test1.cpp  thread_concurrent_msg_q.cpp  thread_data_racing.cpp  thread_fuc_object.cpp  thread_monitor_object_pattern.cpp  thread_mutex_lock.cpp  thread_promise_future.cpp  thread_tutorial1.cpp  thread_vector.cpp  w03003_cur_time.cpp  w03003_ln_command.cpp  w0303_checksum_dec_to_hex.cpp  (+7 more)
workflows/: w0303.drawio  w0303_workflow_summary.drawio  workflow_DoSchedules.drawio  workflow_frontend_funtions.drawio
(+182 files in other folders)
